Fix alignment of advancement configuration link

--- a/less/items.less
+++ b/less/items.less
@@ -251,7 +251,7 @@
         .configuration-mode-control {
           flex: 1 0;
           margin-inline-start: 0.5em;
-          a { text-align: inline-start; }
+          a { text-align: start; }
         }
         .item-add {
           padding-block-start: 0.2em;
